# gingugu

./: .gitignore  .windsurfrules  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  SECURITY.md  glama.json  hatch_build.py  pyproject.toml
.ai/: memory.md
.ai/agents/: backend.md  planner.md  security.md
.ai/plans/: status.md
.ai/specs/: 01-architecture.md  dataflow.md  product-spec.md
.ai/standards/: 01-code-and-testing.md  02-database.md
.claude/: settings.json
.claude/commands/: creating-pr.md  sink-the-ship.md
.claude/hooks/: config_change.py  cwd_changed.py  elicitation.py  elicitation_result.py  file_changed.py  instructions_loaded.py  notification.py  permission_request.py  post_compact.py  post_tool_use.py  post_tool_use_failure.py  pre_compact.py  pre_tool_use.py  session_end.py  session_start.py  stop.py  stop_failure.py  subagent_start.py  subagent_stop.py  task_completed.py  task_created.py  teammate_idle.py  user_prompt_submit.py  worktree_create.py  worktree_remove.py
.claude/hooks/utils/: discover_endpoints.py
.claude/hooks/utils/llm/: anth.py  task_summarizer.py
.claude/hooks/utils/tts/: elevenlabs_tts.py  openai_tts.py  pyttsx3_tts.py  tts_queue.py
.devin/workflows/: sink-the-ship.md
.github/workflows/: ci.yml  release.yml  ui-pages.yml
bench/: __init__.py  __main__.py  dataset.py  metrics.py  runner.py
bench/datasets/: fixture.json
docs/: architecture.md  enterprise-vision.md  future-architecture.md  roadmap.md
examples/: mcp_config.json
src/gingugu/: __init__.py  config.py  consolidation.py  context.py  credentials.py  database.py  decay.py  embeddings.py  models.py  namespaces.py  portability.py  promote.py  relations.py  search.py  search_common.py  search_filters.py  serve.py  server.py  staleness.py  stats.py  storage.py  webui.py
src/gingugu/bootstrap/: __init__.py  settings.py  theme.py
src/gingugu/bootstrap/templates/: rules_protocol.md.tmpl  session_start.py.tmpl  stop.py.tmpl
src/gingugu/handlers/: __init__.py  admin.py  credentials.py  helpers.py  memory.py  recall.py  relations.py  search.py
tests/: conftest.py  test_bench.py  test_bootstrap.py  test_cli.py  test_compact_recall_search.py  test_concurrency.py  test_config.py  test_consolidation.py  test_context.py  test_context_efficiency.py  test_credentials.py  test_database.py  test_decay.py  test_dupe_suggest.py  test_edge_cases.py  test_embeddings.py  test_hub_dampening.py  test_integration.py  test_metadata_coerce.py  test_migrations.py  test_multi_namespace_search.py  test_namespaces.py  test_portability.py  test_promotion.py  test_relations.py  test_review_sweep.py  test_search.py  test_serve.py  test_spreading_activation.py  test_staleness.py  test_stats.py  test_storage.py  test_suggest_relations.py  test_tags.py  test_true_hybrid.py  test_webui.py
ui/: api.py  dump_static.py  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/components/: ConfidenceChart.tsx  Dashboard.tsx  DecayHeatmap.tsx  GraphToolbar.tsx  KnowledgeGraph.tsx  MemoryDetail.tsx  NamespaceChart.tsx  StatsCards.tsx  TagCloud.tsx  Timeline.tsx  TimelineView.tsx  TypeChart.tsx
ui/src/data/: sample.json
ui/src/lib/: colors.ts  decay.ts  graph.ts
ui/src/types/: index.ts
